--- a/Cognita API/Cognita API.csproj
+++ b/Cognita API/Cognita API.csproj
@@ -24,6 +24,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\Cognita Shared\Cognita Shared.csproj" />
+	  <ProjectReference Include="..\Cognita Service.Contracts\Cognita Service.Contracts.csproj" />
 	</ItemGroup>
 
 </Project>
