--- a/Cognita Shared/Cognita Shared.csproj
+++ b/Cognita Shared/Cognita Shared.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Bogus" Version="35.6.1" />
+  </ItemGroup>
+
 </Project>
