--- a/Cognita Service/Cognita-Service.csproj
+++ b/Cognita Service/Cognita-Service.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\Cognita Service.Contracts\Cognita Service.Contracts.csproj" />
-    <ProjectReference Include="..\Cognita Shared\Cognita Shared.csproj" />
-    <ProjectReference Include="..\Cognita Domain.Contracts\Cognita Domain.Contracts.csproj" />
+    <ProjectReference Include="..\Cognita Service.Contracts\Cognita-Service.Contracts.csproj" />
+    <ProjectReference Include="..\Cognita Shared\Cognita-Shared.csproj" />
+    <ProjectReference Include="..\Cognita Domain.Contracts\Cognita-Domain.Contracts.csproj" />
   </ItemGroup>
 
   <ItemGroup>
