--- a/Cognita Infrastructure/Cognita-Infrastructure.csproj
+++ b/Cognita Infrastructure/Cognita-Infrastructure.csproj
@@ -13,6 +13,10 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>Cognita_Infrastructure</RootNamespace>
