--- a/Cognita API/appsettings.json
+++ b/Cognita API/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Cognita_APIContext": "Data Source=Cognita_APIContext-3eb49d67-e382-43aa-8c21-fc5ba5439d18.db"
+  },
+  "JwtSettings": {
+    "Issuer": "me",
+    "Audience": "you",
+    "Expires": 100
   }
 }
