Started adding test appsettings for token expiration manipulation in test vs prod.

--- a/Cognita API/Cognita-API.csproj
+++ b/Cognita API/Cognita-API.csproj
@@ -30,4 +30,10 @@
 	  <ProjectReference Include="..\Cognita Domain.Repositories\Cognita-Domain.Repositories.csproj" />
 	</ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.tests.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
