--- a/Cognita-Tests/Cognita-Tests.csproj
+++ b/Cognita-Tests/Cognita-Tests.csproj
@@ -8,6 +8,7 @@
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <UserSecretsId>34c8a151-de7f-4123-8a48-01621c92b84f</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
