Updated ApplicationUser to contain the information of User.

--- a/Cognita Service/Cognita-Service.csproj
+++ b/Cognita Service/Cognita-Service.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <ProjectReference Include="..\Cognita Infrastructure\Cognita-Infrastructure.csproj" />
     <ProjectReference Include="..\Cognita Service.Contracts\Cognita-Service.Contracts.csproj" />
     <ProjectReference Include="..\Cognita Shared\Cognita-Shared.csproj" />
     <ProjectReference Include="..\Cognita Domain.Contracts\Cognita-Domain.Contracts.csproj" />
