Everything except user controller and tests working.

--- a/Cognita Service.Contracts/Cognita-Service.Contracts.csproj
+++ b/Cognita Service.Contracts/Cognita-Service.Contracts.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <ProjectReference Include="..\Cognita Infrastructure\Cognita-Infrastructure.csproj" />
     <ProjectReference Include="..\Cognita Shared\Cognita-Shared.csproj" />
   </ItemGroup>
 
